welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
       avance()
       ^SnakeBuggle:14: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
       avance()
       ^